# FastAPI-template

./: .env-example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  start.bat  start.sh
alembic/: env.py
src/: db.py  main.py
