[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["say1ts <tsydenovsayan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
icecream = "^2.1.3"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
black = "^23.12.1"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
